@@ -1,0 +1,3 @@
+Warning: variable '$y' not declared at feloc.sl:11
+33
+7
